--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<head>
-  <meta charset="utf-8">
-  <title>이것은 테스트입니다?</title>
-</head>
-<body>
-  <h1>이것은 테스트입니다?</h1>
-  <h2>이것은 테스트입니다?</h2>
-  <h3>이것은 테스트입니다?</h3>
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>KDeoDeok - Electric Bulb</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body style="background-color: black;">
+    <div>
+      <center>
+        <h1 style="color:white; font-size:50px; padding-top:100px;">Electric Bulb</h1>
+        <h2 style="color:white; font-size:30px;">Made by KDeoDeok</h1>
+        <img src="Background.png" alt="Background.jpg" width="60%">
+      </center>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
