--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
       <center>
         <h1 style="color:white; font-size:50px; padding-top:100px;">Electric Bulb</h1>
         <h2 style="color:white; font-size:30px;">Made by KDeoDeok</h1>
+
+        <p style="color:white; font-size:20px; padding-top:100px; ">이 모바일 게임은 죽어가는 행성을 전구들로 가득 채우는 게임입니다.</p>
+        <p style="color:white; font-size:20px;">It's a mobile game where  light bulbs fill a dying planet with light bulbs.</p>
+        
+        <h1 style="color:white; font-size:70px; padding-top:100px;">Comming Soon!</h1>
+        
         <img src="Background.png" alt="Background.jpg" width="60%">
       </center>
     </div>
